created new model to detect chairs

--- a/Yolo_5/room_config3.json
+++ b/Yolo_5/room_config3.json
@@ -1,150 +1,456 @@
 {
     "row1": {
         "chair1": {
-            "y0": 416,
-            "x0": 902,
-            "x1": 1017,
-            "y1": 328
+            "y0": 1005,
+            "x0": 1256,
+            "x1": 1408,
+            "y1": 904
+        },
+        "chair2": {
+            "y0": 998,
+            "x0": 1493,
+            "x1": 1643,
+            "y1": 898
+        },
+        "chair3": {
+            "y0": 991,
+            "x0": 1687,
+            "x1": 1840,
+            "y1": 892
+        },
+        "chair4": {
+            "y0": 989,
+            "x0": 1924,
+            "x1": 2085,
+            "y1": 881
+        },
+        "chair5": {
+            "y0": 993,
+            "x0": 2133,
+            "x1": 2301,
+            "y1": 876
+        },
+        "chair6": {
+            "y0": 994,
+            "x0": 2378,
+            "x1": 2539,
+            "y1": 881
+        },
+        "chair7": {
+            "y0": 992,
+            "x0": 2595,
+            "x1": 2760,
+            "y1": 877
+        },
+        "chair8": {
+            "y0": 988,
+            "x0": 2845,
+            "x1": 3006,
+            "y1": 876
+        },
+        "chair9": {
+            "y0": 979,
+            "x0": 3061,
+            "x1": 3221,
+            "y1": 871
+        },
+        "chair10": {
+            "y0": 977,
+            "x0": 3298,
+            "x1": 3454,
+            "y1": 871
         }
     },
     "row2": {
         "chair1": {
-            "y0": 465,
-            "x0": 533,
-            "x1": 680,
-            "y1": 351
+            "y0": 1074,
+            "x0": 1105,
+            "x1": 1269,
+            "y1": 968
         },
         "chair2": {
-            "y0": 467,
-            "x0": 730,
-            "x1": 871,
-            "y1": 358
+            "y0": 1069,
+            "x0": 1373,
+            "x1": 1527,
+            "y1": 972
         },
         "chair3": {
-            "y0": 465,
-            "x0": 914,
-            "x1": 1057,
-            "y1": 356
+            "y0": 1067,
+            "x0": 1608,
+            "x1": 1764,
+            "y1": 966
         },
         "chair4": {
-            "y0": 467,
-            "x0": 1125,
-            "x1": 1266,
-            "y1": 358
+            "y0": 1069,
+            "x0": 1855,
+            "x1": 2021,
+            "y1": 956
         },
         "chair5": {
-            "y0": 474,
-            "x0": 1301,
-            "x1": 1446,
-            "y1": 357
+            "y0": 1064,
+            "x0": 2092,
+            "x1": 2252,
+            "y1": 956
+        },
+        "chair6": {
+            "y0": 1066,
+            "x0": 2344,
+            "x1": 2493,
+            "y1": 967
+        },
+        "chair7": {
+            "y0": 1064,
+            "x0": 2576,
+            "x1": 2724,
+            "y1": 966
+        },
+        "chair8": {
+            "y0": 1050,
+            "x0": 2865,
+            "x1": 3035,
+            "y1": 932
+        },
+        "chair9": {
+            "y0": 1051,
+            "x0": 3125,
+            "x1": 3298,
+            "y1": 931
+        },
+        "chair10": {
+            "y0": 1042,
+            "x0": 3384,
+            "x1": 3559,
+            "y1": 925
         }
     },
     "row3": {
         "chair1": {
-            "y0": 529,
-            "x0": 427,
-            "x1": 613,
-            "y1": 383
+            "y0": 1162,
+            "x0": 916,
+            "x1": 1119,
+            "y1": 1022
         },
         "chair2": {
-            "y0": 534,
-            "x0": 679,
-            "x1": 861,
-            "y1": 395
+            "y0": 1155,
+            "x0": 1219,
+            "x1": 1408,
+            "y1": 1029
         },
         "chair3": {
-            "y0": 535,
-            "x0": 901,
-            "x1": 1086,
-            "y1": 396
+            "y0": 1147,
+            "x0": 1463,
+            "x1": 1660,
+            "y1": 1017
         },
         "chair4": {
-            "y0": 534,
-            "x0": 1116,
-            "x1": 1307,
-            "y1": 388
+            "y0": 1144,
+            "x0": 1761,
+            "x1": 1969,
+            "y1": 1003
         },
         "chair5": {
-            "y0": 533,
-            "x0": 1330,
-            "x1": 1519,
-            "y1": 389
+            "y0": 1149,
+            "x0": 2012,
+            "x1": 2214,
+            "y1": 1010
         },
         "chair6": {
-            "y0": 534,
-            "x0": 1561,
-            "x1": 1733,
-            "y1": 405
+            "y0": 1145,
+            "x0": 2311,
+            "x1": 2513,
+            "y1": 1009
+        },
+        "chair7": {
+            "y0": 1147,
+            "x0": 2578,
+            "x1": 2781,
+            "y1": 1009
+        },
+        "chair8": {
+            "y0": 1134,
+            "x0": 2891,
+            "x1": 3104,
+            "y1": 989
+        },
+        "chair9": {
+            "y0": 1135,
+            "x0": 3162,
+            "x1": 3358,
+            "y1": 1004
+        },
+        "chair10": {
+            "y0": 1130,
+            "x0": 3482,
+            "x1": 3696,
+            "y1": 983
         }
     },
     "row4": {
         "chair1": {
-            "y0": 636,
-            "x0": 337,
-            "x1": 569,
-            "y1": 460
+            "y0": 1259,
+            "x0": 818,
+            "x1": 1044,
+            "y1": 1107
         },
         "chair2": {
-            "y0": 634,
-            "x0": 591,
-            "x1": 824,
-            "y1": 454
+            "y0": 1254,
+            "x0": 1169,
+            "x1": 1378,
+            "y1": 1118
         },
         "chair3": {
-            "y0": 635,
-            "x0": 852,
-            "x1": 1080,
-            "y1": 460
+            "y0": 1254,
+            "x0": 1418,
+            "x1": 1664,
+            "y1": 1083
         },
         "chair4": {
-            "y0": 639,
-            "x0": 1175,
-            "x1": 1396,
-            "y1": 466
+            "y0": 1253,
+            "x0": 1769,
+            "x1": 2020,
+            "y1": 1081
         },
         "chair5": {
-            "y0": 644,
-            "x0": 1418,
-            "x1": 1656,
-            "y1": 453
+            "y0": 1248,
+            "x0": 2056,
+            "x1": 2299,
+            "y1": 1092
         },
         "chair6": {
-            "y0": 640,
-            "x0": 1684,
-            "x1": 1906,
-            "y1": 465
+            "y0": 1244,
+            "x0": 2419,
+            "x1": 2652,
+            "y1": 1087
+        },
+        "chair7": {
+            "y0": 1242,
+            "x0": 2717,
+            "x1": 2951,
+            "y1": 1088
+        },
+        "chair8": {
+            "y0": 1239,
+            "x0": 3078,
+            "x1": 3314,
+            "y1": 1075
+        },
+        "chair9": {
+            "y0": 1237,
+            "x0": 3386,
+            "x1": 3644,
+            "y1": 1054
         }
     },
     "row5": {
         "chair1": {
-            "y0": 799,
-            "x0": 112,
-            "x1": 421,
-            "y1": 572
+            "y0": 1345,
+            "x0": 338,
+            "x1": 625,
+            "y1": 1153
         },
         "chair2": {
-            "y0": 783,
-            "x0": 529,
-            "x1": 832,
-            "y1": 577
+            "y0": 1344,
+            "x0": 749,
+            "x1": 1022,
+            "y1": 1153
         },
         "chair3": {
-            "y0": 795,
-            "x0": 875,
-            "x1": 1178,
-            "y1": 578
+            "y0": 1338,
+            "x0": 1077,
+            "x1": 1335,
+            "y1": 1166
         },
         "chair4": {
-            "y0": 792,
-            "x0": 1251,
-            "x1": 1550,
-            "y1": 580
+            "y0": 1328,
+            "x0": 1441,
+            "x1": 1742,
+            "y1": 1133
         },
         "chair5": {
-            "y0": 789,
-            "x0": 1599,
-            "x1": 1884,
-            "y1": 595
+            "y0": 1330,
+            "x0": 1786,
+            "x1": 2078,
+            "y1": 1137
+        },
+        "chair6": {
+            "y0": 1303,
+            "x0": 2150,
+            "x1": 2443,
+            "y1": 1114
+        },
+        "chair7": {
+            "y0": 1339,
+            "x0": 2210,
+            "x1": 2474,
+            "y1": 1155
+        },
+        "chair8": {
+            "y0": 1336,
+            "x0": 2549,
+            "x1": 2829,
+            "y1": 1136
+        },
+        "chair9": {
+            "y0": 1324,
+            "x0": 2960,
+            "x1": 3251,
+            "y1": 1128
+        },
+        "chair10": {
+            "y0": 1323,
+            "x0": 3338,
+            "x1": 3623,
+            "y1": 1126
+        },
+        "chair11": {
+            "y0": 1327,
+            "x0": 3749,
+            "x1": 4064,
+            "y1": 1103
+        }
+    },
+    "row6": {
+        "chair1": {
+            "y0": 1452,
+            "x0": 50,
+            "x1": 416,
+            "y1": 1209
+        },
+        "chair2": {
+            "y0": 1442,
+            "x0": 532,
+            "x1": 887,
+            "y1": 1210
+        },
+        "chair3": {
+            "y0": 1438,
+            "x0": 934,
+            "x1": 1281,
+            "y1": 1207
+        },
+        "chair4": {
+            "y0": 1442,
+            "x0": 1389,
+            "x1": 1761,
+            "y1": 1191
+        },
+        "chair5": {
+            "y0": 1437,
+            "x0": 1812,
+            "x1": 2166,
+            "y1": 1203
+        },
+        "chair6": {
+            "y0": 1430,
+            "x0": 2306,
+            "x1": 2663,
+            "y1": 1198
+        },
+        "chair7": {
+            "y0": 1429,
+            "x0": 2732,
+            "x1": 3103,
+            "y1": 1183
+        },
+        "chair8": {
+            "y0": 1424,
+            "x0": 3244,
+            "x1": 3628,
+            "y1": 1169
+        },
+        "chair9": {
+            "y0": 1430,
+            "x0": 3679,
+            "x1": 4055,
+            "y1": 1180
+        }
+    },
+    "row7": {
+        "chair1": {
+            "y0": 1629,
+            "x0": 5,
+            "x1": 185,
+            "y1": 1582
+        },
+        "chair2": {
+            "y0": 1613,
+            "x0": 243,
+            "x1": 695,
+            "y1": 1311
+        },
+        "chair3": {
+            "y0": 1624,
+            "x0": 836,
+            "x1": 1312,
+            "y1": 1294
+        },
+        "chair4": {
+            "y0": 1609,
+            "x0": 1347,
+            "x1": 1802,
+            "y1": 1302
+        },
+        "chair5": {
+            "y0": 1620,
+            "x0": 1982,
+            "x1": 2421,
+            "y1": 1328
+        },
+        "chair6": {
+            "y0": 1615,
+            "x0": 2480,
+            "x1": 2935,
+            "y1": 1307
+        },
+        "chair7": {
+            "y0": 1602,
+            "x0": 3122,
+            "x1": 3599,
+            "y1": 1283
+        },
+        "chair8": {
+            "y0": 1603,
+            "x0": 3682,
+            "x1": 4191,
+            "y1": 1257
+        },
+        "chair9": {
+            "y0": 1612,
+            "x0": 4350,
+            "x1": 4608,
+            "y1": 1509
+        }
+    },
+    "row8": {
+        "chair1": {
+            "y0": 1910,
+            "x0": 0,
+            "x1": 324,
+            "y1": 1788
+        },
+        "chair2": {
+            "y0": 1912,
+            "x0": 539,
+            "x1": 1147,
+            "y1": 1508
+        },
+        "chair3": {
+            "y0": 1908,
+            "x0": 1223,
+            "x1": 1838,
+            "y1": 1506
+        },
+        "chair4": {
+            "y0": 1908,
+            "x0": 2072,
+            "x1": 2712,
+            "y1": 1474
+        },
+        "chair5": {
+            "y0": 1916,
+            "x0": 3676,
+            "x1": 4357,
+            "y1": 1453
         }
     }
 }
